# Spacetorio

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  compile_flags.txt  notes.org
Spacetorio/: CMakeLists.txt  Camera.cpp  Camera.hpp  Components.hpp  Components_clickables.hpp  Components_colliders.hpp  Components_generic.hpp  Components_planet.cpp  Components_planet.hpp  Components_player.hpp  Components_position.cpp  Components_position.hpp  Components_renderables.hpp  Components_updatable.hpp  Data_materials.hpp  Entity.cpp  Entity.hpp  Entity_drop.cpp  Entity_drop.hpp  Entity_player.cpp  Entity_player.hpp  Entity_tile.cpp  Entity_tile.hpp  GameController.cpp  GameController.hpp  Planet.cpp  Planet.hpp  Renderer.cpp  Renderer.hpp  Renderer_shader.hpp  Scene.cpp  Scene.hpp  SceneBiome.cpp  SceneBiome.hpp  Spacetorio.cpp  Spacetorio.h  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp  (+9 more)
Spacetorio/shaders/: basic.vert  basicTexture.frag  basicTexture.vert  sprites.vert  tiles.frag  tiles.vert
other/: ___test.py
